MDEV-17038 ALTER TABLE CHANGE COLUMN c1 c1 bigint NOT NULL - generates error if table uses SYSTEM VERSIONING

* Fine-grained inplace skipping by INNOBASE_ALTER_VERSIONED_REBUILD;
* Fixed column WITHOUT SYSTEM VERSIONING + ADD COLUMN;
* Revisited online.test.

Closes tempesta-tech/mariadb#414
Closes tempesta-tech/mariadb#540
Related to tempesta-tech/mariadb#281