storage/innobase/handler/handler0alter.cc
@@ -73,6 +73,12 @@ static const alter_table_operations INNOBASE_DEFAULTS
 	= ALTER_COLUMN_NOT_NULLABLE
 	| ALTER_ADD_STORED_BASE_COLUMN;
 
+
+/** Operations that require knowledge about row_start, row_end values */
+static const alter_table_operations INNOBASE_ALTER_VERSIONED_REBUILD
+	= ALTER_ADD_SYSTEM_VERSIONING
+	| ALTER_DROP_SYSTEM_VERSIONING;
+
 /** Operations for rebuilding a table in place */
 static const alter_table_operations INNOBASE_ALTER_REBUILD
 	= ALTER_ADD_PK_INDEX
@@ -87,8 +93,7 @@ static const alter_table_operations INNOBASE_ALTER_REBUILD
 	/*
 	| ALTER_STORED_COLUMN_TYPE
 	*/
-	| ALTER_ADD_SYSTEM_VERSIONING
-	| ALTER_DROP_SYSTEM_VERSIONING
+	| INNOBASE_ALTER_VERSIONED_REBUILD
 	;
 
 /** Operations that require changes to data */
@@ -849,11 +854,10 @@ ha_innobase::check_if_supported_inplace_alter(
 {
 	DBUG_ENTER("check_if_supported_inplace_alter");
 
-	if ((table->versioned(VERS_TIMESTAMP)
-	     || altered_table->versioned(VERS_TIMESTAMP))
-	    && innobase_need_rebuild(ha_alter_info, table)) {
+	if (altered_table->versioned(VERS_TIMESTAMP)
+	    && (ha_alter_info->handler_flags & INNOBASE_ALTER_VERSIONED_REBUILD)) {
 		ha_alter_info->unsupported_reason =
-			"Not implemented for system-versioned tables";
+			"Not implemented for system-versioned timestamp tables";
 		DBUG_RETURN(HA_ALTER_INPLACE_NOT_SUPPORTED);
 	}
 
@@ -1419,14 +1423,12 @@ cannot_create_many_fulltext_index:
 		}
 	}
 
-	// FIXME: implement Online DDL for system-versioned tables
-	if ((table->versioned(VERS_TRX_ID)
-	     || altered_table->versioned(VERS_TRX_ID))
-	    && innobase_need_rebuild(ha_alter_info, table)) {
+	// FIXME: implement Online DDL for system-versioned operations
+	if (ha_alter_info->handler_flags & INNOBASE_ALTER_VERSIONED_REBUILD) {
 
 		if (ha_alter_info->online) {
 			ha_alter_info->unsupported_reason =
-				"Not implemented for system-versioned tables";
+				"Not implemented for system-versioned operations";
 		}
 
 		online = false;
@@ -5374,7 +5376,9 @@ new_clustered_failed:
 				ut_d(const dict_index_t* index
 				     = user_table->indexes.start);
 				DBUG_ASSERT(col->mtype == old_col->mtype);
-				DBUG_ASSERT(col->prtype == old_col->prtype);
+				DBUG_ASSERT(col->prtype == old_col->prtype
+					    || col->prtype
+					    == (old_col->prtype & ~DATA_VERSIONED));
 				DBUG_ASSERT(col->mbminlen
 					    == old_col->mbminlen);
 				DBUG_ASSERT(col->mbmaxlen
